--- a/package.json
+++ b/package.json
@@ -1,31 +1,66 @@
 {
-  "name": "travel-art",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@types/firebase": "^3.2.1",
-    "@types/react-router-dom": "^5.3.3",
-    "firebase": "^10.8.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-firebase-hooks": "^5.1.1",
-    "react-router-dom": "^6.22.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.0.8"
-  }
+	"name": "chakrauidemo",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@chakra-ui/icons": "^2.0.8",
+		"@chakra-ui/react": "^2.2.8",
+		"@choc-ui/chakra-autocomplete": "^5.1.4",
+		"@emotion/react": "^11.10.0",
+		"@emotion/styled": "^11.10.0",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^13.3.0",
+		"@testing-library/user-event": "^13.5.0",
+		"@types/firebase": "^3.2.1",
+		"@types/react-router-dom": "^5.3.3",
+		"d3": "^7.6.1",
+		"d3-shape": "^3.1.0",
+		"firebase": "^10.8.0",
+		"framer-motion": "^7.1.1",
+		"geolib": "^3.3.3",
+		"lodash": "^4.17.21",
+		"moment-timezone": "^0.5.34",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-firebase-hooks": "^5.1.1",
+		"react-icons": "^4.4.0",
+		"react-live-clock": "^6.0.6",
+		"react-moment": "^1.1.2",
+		"react-redux": "^8.0.2",
+		"react-router-dom": "^6.22.0",
+		"react-scripts": "5.0.1",
+		"redux": "^4.2.0",
+		"redux-persist": "^6.0.0",
+		"suncalc": "^1.9.0",
+		"topojson-client": "^3.1.0",
+		"tz-lookup": "^6.1.25",
+		"versor": "^0.2.0",
+		"web-vitals": "^2.1.4"
+	},
+	"scripts": {
+		"//start": "react-scripts start",
+		"start": "react-scripts start",
+		"build": "DISABLE_ESLINT_PLUGIN=true GENERATE_SOURCEMAP=false react-scripts build",
+		"build-deploy": "DISABLE_ESLINT_PLUGIN=true GENERATE_SOURCEMAP=false react-scripts build && firebase deploy",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"babel-eslint": "^10.1.0",
+		"eslint": "^8.28.0",
+		"eslint-plugin-react": "^7.31.11",
+		"sass": "^1.56.2"
+	}
 }
