--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@testing-library/react": "^13.3.0",
 		"@testing-library/user-event": "^13.5.0",
 		"@types/firebase": "^3.2.1",
+		"@types/prop-types": "^15.7.11",
 		"@types/react-router-dom": "^5.3.3",
 		"d3": "^7.6.1",
 		"d3-shape": "^3.1.0",
