--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"suncalc": "^1.9.0",
 		"topojson-client": "^3.1.0",
 		"tz-lookup": "^6.1.25",
+		"uuid": "^9.0.1",
 		"versor": "^0.2.0",
 		"web-vitals": "^2.1.4"
 	},
