--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@types/firebase": "^3.2.1",
 		"@types/prop-types": "^15.7.11",
 		"@types/react-router-dom": "^5.3.3",
+		"@types/uuid": "^9.0.8",
 		"d3": "^7.6.1",
 		"d3-shape": "^3.1.0",
 		"firebase": "^10.8.0",
